--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -1,202 +1,179 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
-    <title>Complaint</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" />
-    <link rel="stylesheet" href="assets/css/-Fixed-Navbar-start-with-transparency-background-BS4-.css" />
-    <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css" />
-    <link rel="stylesheet" href="assets/css/gradient-navbar-1.css" />
-    <link rel="stylesheet" href="assets/css/gradient-navbar.css" />
-    <link rel="stylesheet" href="assets/css/Login-Red.css" />
-    <link rel="stylesheet" href="assets/css/sidebar-1.css" />
-    <link rel="stylesheet" href="assets/css/sidebar.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
-    <link rel="stylesheet" href="assets/css/User-Tasks-and-User-Activity-Streams---List-Group-Component.css" />
-  </head>
+  <title>Complaint</title>
 
-  <body onload="trendAndListData();">    
-    <nav class="navbar navbar-dark navbar-expand-md" id="app-navbar">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"
-          ><i class="icon ion-ios-infinite" id="brand-logo"></i></a
-        ><button
-          class="navbar-toggler"
-          data-toggle="collapse"
-          data-target="#navcol-1"
-        >
-          <span class="sr-only">Toggle navigation</span
-          ><span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navcol-1">
-          <ul class="nav navbar-nav ml-auto">
-            <li class="nav-item" role="presentation">
-              <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item" role="presentation">
-              <a class="nav-link" href="showall.html">Show All</a>
-            </li>
-            <li class="nav-item" role="presentation">
-              <a class="nav-link" href="#">Contact Us</a>
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/fonts/ionicons.min.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" />
+  <link rel="stylesheet" href="assets/css/-Fixed-Navbar-start-with-transparency-background-BS4-.css" />
+  <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css" />
+  <link rel="stylesheet" href="assets/css/gradient-navbar-1.css" />
+  <link rel="stylesheet" href="assets/css/gradient-navbar.css" />
+  <link rel="stylesheet" href="assets/css/Login-Red.css" />
+  <link rel="stylesheet" href="assets/css/sidebar-1.css" />
+  <link rel="stylesheet" href="assets/css/sidebar.css" />
+  <link rel="stylesheet" href="assets/css/styles.css" />
+  <link rel="stylesheet" href="assets/css/User-Tasks-and-User-Activity-Streams---List-Group-Component.css" />
+</head>
+
+<body onload="trendAndListData();">
+  <nav class="navbar navbar-dark navbar-expand-md" id="app-navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><i class="icon ion-ios-infinite" id="brand-logo"></i></a><button
+        class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1">
+        <span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navcol-1">
+        <ul class="nav navbar-nav ml-auto">
+          <li class="nav-item" role="presentation">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link" href="showall.html">Show All</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="row" style="width: 100%">
+    <div class="col-lg-7 offset-lg-1">
+      <form method="post">
+        <h4 class="text-center">What's happening..?💥</h4>
+        <div class="form-group" style="margin: 0px 0px 10px">
+          <ul class="list-group">
+            <li class="list-group-item" style="height: 84px">
+              <div class="media">
+                <div></div>
+                <div class="media-body">
+                  <div class="media" style="overflow: visible">
+                    <div></div>
+                    <div class="media-body" style="overflow: visible">
+                      <div class="form-row">
+                        <div class="col-10">
+                          <h5>
+                            <a href="#" id="trend_one">Loading...</a>
+                          </h5>
+                          <p id="trend_one_paragraph" style="font-size: 16px;">
+                            <br />
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
-      </div>
-    </nav>
-    <div class="row" style="width: 100%">
-      <div class="col-lg-7 offset-lg-1">
-        <form method="post">
-          <h4 class="text-center">What's happening..?💥</h4>
-          <div class="form-group" style="margin: 0px 0px 10px">
-            <ul class="list-group">
-              <li class="list-group-item" style="height: 84px">
-                <div class="media">
-                  <div></div>
-                  <div class="media-body">
-                    <div class="media" style="overflow: visible">
-                      <div></div>
-                      <div class="media-body" style="overflow: visible">
-                        <div class="form-row">
-                          <div class="col-10">
-                            <h5>
-                              <a href="#" id="trend_one" >Loading...</a>
-                            </h5>
-                            <p id="trend_one_paragraph" style="font-size: 16px;">
-                              <br />
-                            </p>
-                          </div>
+        <div class="form-group" style="margin: 0px 0px 10px">
+          <ul class="list-group">
+            <li class="list-group-item" style="height: 84px">
+              <div class="media">
+                <div></div>
+                <div class="media-body">
+                  <div class="media" style="overflow: visible">
+                    <div></div>
+                    <div class="media-body" style="overflow: visible">
+                      <div class="form-row">
+                        <div class="col-10">
+                          <h5>
+                            <a href="#" id="trend_two">Loading...<strong></strong></a>
+                          </h5>
+                          <p id="trend_two_paragraph" style="font-size: 16px">
+                            <br />
+                          </p>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-              </li>
-            </ul>
-          </div>
-          <div class="form-group" style="margin: 0px 0px 10px">
-            <ul class="list-group">
-              <li class="list-group-item" style="height: 84px">
-                <div class="media">
-                  <div></div>
-                  <div class="media-body">
-                    <div class="media" style="overflow: visible">
-                      <div></div>
-                      <div class="media-body" style="overflow: visible">
-                        <div class="form-row">
-                          <div class="col-10">
-                            <h5>
-                              <a href="#" id="trend_two">Loading...<strong></strong></a>
-                            </h5>
-                            <p id="trend_two_paragraph" style="font-size: 16px">
-                              <br />
-                            </p>
-                          </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="form-group" style="margin: 0px 0px 10px">
+          <ul class="list-group">
+            <li class="list-group-item" style="height: 84px">
+              <div class="media">
+                <div></div>
+                <div class="media-body">
+                  <div class="media" style="overflow: visible">
+                    <div></div>
+                    <div class="media-body" style="overflow: visible">
+                      <div class="form-row">
+                        <div class="col-10">
+                          <h5>
+                            <a href="#" id="trend_three">Loading...<strong></strong></a>
+                          </h5>
+                          <p id="trend_three_paragraph" style="font-size: 16px">
+                            <br />
+                          </p>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-              </li>
-            </ul>
-          </div>
-          <div class="form-group" style="margin: 0px 0px 10px">
-            <ul class="list-group">
-              <li class="list-group-item" style="height: 84px">
-                <div class="media">
-                  <div></div>
-                  <div class="media-body">
-                    <div class="media" style="overflow: visible">
-                      <div></div>
-                      <div class="media-body" style="overflow: visible">
-                        <div class="form-row">
-                          <div class="col-10">
-                            <h5>
-                              <a href="#" id="trend_three">Loading...<strong></strong></a>
-                            </h5>
-                            <p id="trend_three_paragraph" style="font-size: 16px">
-                              <br />
-                            </p>
-                          </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="form-group" style="margin: 0px 0px 10px">
+          <ul class="list-group">
+            <li class="list-group-item" style="height: 84px">
+              <div class="media">
+                <div></div>
+                <div class="media-body">
+                  <div class="media" style="overflow: visible">
+                    <div></div>
+                    <div class="media-body" style="overflow: visible">
+                      <div class="form-row">
+                        <div class="col-10">
+                          <h5>
+                            <a href="#" id="trend_four">Loading...<strong></strong></a>
+                          </h5>
+                          <p id="trend_four_paragraph" style="font-size: 16px">
+                            <br />
+                          </p>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-              </li>
-            </ul>
-          </div>
-          <div class="form-group" style="margin: 0px 0px 10px">
-            <ul class="list-group">
-              <li class="list-group-item" style="height: 84px">
-                <div class="media">
-                  <div></div>
-                  <div class="media-body">
-                    <div class="media" style="overflow: visible">
-                      <div></div>
-                      <div class="media-body" style="overflow: visible">
-                        <div class="form-row">
-                          <div class="col-10">
-                            <h5>
-                              <a href="#" id="trend_four">Loading...<strong></strong></a>
-                            </h5>
-                            <p id="trend_four_paragraph" style="font-size: 16px"> 
-                              <br />
-                            </p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </form>
-      </div>
-      <div class="col-lg-4 offset-lg-0 text-center">
-        <form action="http://localhost:9099/submit" method="get" style="width: 100%" autocomplete="off">
-          <h4 class="text-center">Complaint Box</h4>
-          <div class="form-group">
-            <input
-              required
-              class="form-control"
-              type="text"
-              maxlength="30"
-              name="complaintTitle"
-              placeholder="Title"
-            />
-          </div>
-          <div class="form-group">
-            <textarea
-              required
-              class="form-control"
-              rows="15"
-              name="complaintDiscretion"
-              placeholder="Description"
-            ></textarea>
-          </div>
-        <button
-          class="btn btn-primary text-center"
-          type="submit"
-          style="width: 101px"
-        >
+              </div>
+            </li>
+          </ul>
+        </div>
+      </form>
+    </div>
+    <div class="col-lg-4 offset-lg-0 text-center">
+      <form action="http://localhost:9099/submit" method="get" style="width: 100%" autocomplete="off">
+        <h4 class="text-center">Complaint Box</h4>
+        <div class="form-group">
+          <input required class="form-control" type="text" maxlength="30" name="complaintTitle" placeholder="Title" />
+        </div>
+        <div class="form-group">
+          <textarea required class="form-control" rows="15" name="complaintDiscretion"
+            placeholder="Description"></textarea>
+        </div>
+        <button class="btn btn-primary text-center" type="submit" style="width: 101px">
           SEND
         </button>
-        </form>
-      </div>
+      </form>
     </div>
+  </div>
 
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/-Fixed-Navbar-start-with-transparency-background-BS4-.js"></script>
-    <script src="custom_JS/httpCall.js"></script>
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/js/-Fixed-Navbar-start-with-transparency-background-BS4-.js"></script>
+  <script src="custom_JS/httpCall.js"></script>
 
-    <p id="data"></p>
-    
-  </body>
+  <p id="data"></p>
+
+</body>
+
 </html>
